@@ -3,7 +3,6 @@ package com.daveestar.bettervanilla.gui;
 import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -42,6 +41,7 @@ public class VeinChopperSettingsGUI implements Listener {
             .map(Material::matchMaterial).filter(Objects::nonNull).toList(),
         () -> _settingsManager.getVeinChopperAllowedTools(),
         list -> _settingsManager.setVeinChopperAllowedTools(list));
+
     _blocksGUI = new MaterialToggleGUI("Vein Chopper Blocks",
         SettingsManager.DEFAULT_VEIN_CHOPPER_BLOCKS.stream()
             .map(Material::matchMaterial).filter(Objects::nonNull).toList(),
@@ -53,31 +53,29 @@ public class VeinChopperSettingsGUI implements Listener {
 
   public void displayGUI(Player p, CustomGUI parent) {
     Map<String, ItemStack> entries = new HashMap<>();
-    entries.put("enabled", _createEnabledItem());
-    entries.put("maxsize", _createMaxSizeItem());
-    entries.put("sound", _createSoundItem());
     entries.put("tools", _createToolsItem());
+    entries.put("maxsize", _createMaxSizeItem());
+    entries.put("enabled", _createEnabledItem());
+    entries.put("sound", _createSoundItem());
     entries.put("blocks", _createBlocksItem());
 
     Map<String, Integer> customSlots = new HashMap<>();
-    customSlots.put("enabled", 1);
-    customSlots.put("maxsize", 3);
-    customSlots.put("sound", 5);
-    customSlots.put("tools", 11);
-    customSlots.put("blocks", 15);
+    customSlots.put("tools", 0);
+    customSlots.put("maxsize", 2);
+    customSlots.put("enabled", 4);
+    customSlots.put("sound", 6);
+    customSlots.put("blocks", 8);
 
     CustomGUI gui = new CustomGUI(_plugin, p,
         ChatColor.YELLOW + "" + ChatColor.BOLD + "» Vein Chopper Settings",
-        entries, 3, customSlots, parent,
+        entries, 2, customSlots, parent,
         EnumSet.of(CustomGUI.Option.DISABLE_PAGE_BUTTON));
 
     Map<String, CustomGUI.ClickAction> actions = new HashMap<>();
-    actions.put("enabled", new CustomGUI.ClickAction() {
+    actions.put("tools", new CustomGUI.ClickAction() {
       @Override
       public void onLeftClick(Player player) {
-        boolean newState = !_settingsManager.getVeinChopper();
-        _settingsManager.setVeinChopper(newState);
-        displayGUI(player, parent);
+        _toolsGUI.displayGUI(player, gui);
       }
     });
     actions.put("maxsize", new CustomGUI.ClickAction() {
@@ -88,18 +86,20 @@ public class VeinChopperSettingsGUI implements Listener {
         player.closeInventory();
       }
     });
+    actions.put("enabled", new CustomGUI.ClickAction() {
+      @Override
+      public void onLeftClick(Player player) {
+        boolean newState = !_settingsManager.getVeinChopperEnabled();
+        _settingsManager.setVeinChopperEnabled(newState);
+        displayGUI(player, parent);
+      }
+    });
     actions.put("sound", new CustomGUI.ClickAction() {
       @Override
       public void onLeftClick(Player player) {
         boolean newState = !_settingsManager.getVeinChopperSound();
         _settingsManager.setVeinChopperSound(newState);
         displayGUI(player, parent);
-      }
-    });
-    actions.put("tools", new CustomGUI.ClickAction() {
-      @Override
-      public void onLeftClick(Player player) {
-        _toolsGUI.displayGUI(player, gui);
       }
     });
     actions.put("blocks", new CustomGUI.ClickAction() {
@@ -114,34 +114,43 @@ public class VeinChopperSettingsGUI implements Listener {
   }
 
   private ItemStack _createEnabledItem() {
-    boolean state = _settingsManager.getVeinChopper();
+    boolean state = _settingsManager.getVeinChopperEnabled();
     ItemStack item = new ItemStack(Material.DIAMOND_AXE);
     ItemMeta meta = item.getItemMeta();
+
     if (meta != null) {
       meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Enabled"));
+      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Vein Chopper"));
       meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Toggle global vein miner state.",
+          "",
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
               + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
           .stream().filter(Objects::nonNull).map(Component::text).collect(Collectors.toList()));
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
   private ItemStack _createMaxSizeItem() {
-    int val = _settingsManager.getVeinChopperMaxVeinSize();
+    int veinSize = _settingsManager.getVeinChopperMaxVeinSize();
     ItemStack item = new ItemStack(Material.PAPER);
     ItemMeta meta = item.getItemMeta();
+
     if (meta != null) {
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Max Vein Size"));
+      meta.displayName(
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Maximum Vein Size"));
       meta.lore(Arrays.asList(
-          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Current: " + ChatColor.YELLOW + val,
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Set the maximum size of veins that can be chopped.",
+          "",
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Current: " + ChatColor.YELLOW + veinSize,
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Set value")
           .stream().filter(Objects::nonNull).map(Component::text).collect(Collectors.toList()));
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
@@ -149,39 +158,55 @@ public class VeinChopperSettingsGUI implements Listener {
     boolean state = _settingsManager.getVeinChopperSound();
     ItemStack item = new ItemStack(Material.NOTE_BLOCK);
     ItemMeta meta = item.getItemMeta();
+
     if (meta != null) {
       meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Sound"));
       meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Toggle sound effects for vein chopper.",
+          "",
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "State: "
               + (state ? ChatColor.GREEN + "ENABLED" : ChatColor.RED + "DISABLED"),
           ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Toggle")
           .stream().filter(Objects::nonNull).map(Component::text).collect(Collectors.toList()));
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
   private ItemStack _createToolsItem() {
     ItemStack item = new ItemStack(Material.IRON_AXE);
     ItemMeta meta = item.getItemMeta();
+
     if (meta != null) {
       meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
       meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Allowed Tools"));
-      meta.lore(List.of(Component.text(ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Open")));
+      meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Open menu to manage allowed tools.",
+          "",
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Open").stream().filter(Objects::nonNull)
+          .map(Component::text).collect(Collectors.toList()));
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
   private ItemStack _createBlocksItem() {
     ItemStack item = new ItemStack(Material.OAK_LOG);
     ItemMeta meta = item.getItemMeta();
+
     if (meta != null) {
-          
-      meta.displayName(Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Allowed Blocks"));
-      meta.lore(List.of(Component.text(ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Open")));
+      meta.displayName(
+          Component.text(ChatColor.RED + "" + ChatColor.BOLD + "» " + ChatColor.YELLOW + "Allowed Blocks"));
+      meta.lore(Arrays.asList(
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Open menu to manage allowed blocks.",
+          "",
+          ChatColor.YELLOW + "» " + ChatColor.GRAY + "Left-Click: Open").stream().filter(Objects::nonNull)
+          .map(Component::text).collect(Collectors.toList()));
       item.setItemMeta(meta);
     }
+
     return item;
   }
 
@@ -195,16 +220,17 @@ public class VeinChopperSettingsGUI implements Listener {
       String content = ((TextComponent) e.message()).content();
 
       try {
-        int val = Integer.parseInt(content);
-        if (val < 1 || val > 1024) {
+        int veinSize = Integer.parseInt(content);
+        if (veinSize < 1 || veinSize > 1024) {
           p.sendMessage(Main.getPrefix() + ChatColor.RED + "Value must be between 1 and 1024.");
           return;
         }
 
         _plugin.getServer().getScheduler().runTask(_plugin, () -> {
-          _settingsManager.setVeinChopperMaxVeinSize(val);
-          p.sendMessage(Main.getPrefix() + "Max vein size set to: " + ChatColor.YELLOW + val);
+          _settingsManager.setVeinChopperMaxVeinSize(veinSize);
+
           p.playSound(p, Sound.ENTITY_PLAYER_LEVELUP, 0.5F, 1);
+
           CustomGUI parent = _sizePending.remove(id);
           displayGUI(p, parent);
         });
